force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Total_Yearly_Volume__c.field-meta.xml
<CustomField>
    <fullName>Total_Yearly_Volume__c</fullName>
    <formula>TEXT( Opportunity__r.Call_Volume_Next_Fiscal__c )</formula>
    <inlineHelpText>Call Volume Next Fiscal reads in from the value entered on the Opportunity record.</inlineHelpText>
    <label>zDEL_Total Yearly Volume</label>
    <type>Text</type>
</CustomField>