force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Type_of_product__c.field-meta.xml
<CustomField>
    <fullName>Type_of_product__c</fullName>
    <inlineHelpText>Examples: Washer, Dryer, Furniture, Mattresses, etc.</inlineHelpText>
    <label>Type of product</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>