force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Type_of_Services__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Services__c</fullName>
    <label>Type of Services</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In-Home</fullName>
            </value>
            <value>
                <fullName>Delivery</fullName>
            </value>
            <value>
                <fullName>Install</fullName>
            </value>
            <value>
                <fullName>CarryIn</fullName>
            </value>
            <value>
                <fullName>Repair-Replace</fullName>
            </value>
            <value>
                <fullName>PM Check</fullName>
            </value>
            <value>
                <fullName>Store Stock</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>