force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Volume_Breakdown__c.field-meta.xml
<CustomField>
    <fullName>Volume_Breakdown__c</fullName>
    <inlineHelpText>Example: 2000 Collect Calls (1800 In Home; 200 CarryIn) 500 In Warranty (400 In Home; 100 CarryIn)
Example: 5000 deliveries 4000 setups 500 installations</inlineHelpText>
    <label>zDEL_Volume Breakdown</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>