force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Warranty_information__c.field-meta.xml
<CustomField>
    <fullName>Warranty_information__c</fullName>
    <inlineHelpText>What kind of warranties does the client provide? Need the information to be sent electronically. For example what parts and labor are covered under what conditions?</inlineHelpText>
    <label>Warranty information</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>