force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Way_to_set_service__c.field-meta.xml
<CustomField>
    <fullName>Way_to_set_service__c</fullName>
    <inlineHelpText>If other is chosen, explain in Other CCN needs/requirements</inlineHelpText>
    <label>Primary way to set service</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SPI</fullName>
            </value>
            <value>
                <fullName>SPI2</fullName>
            </value>
            <value>
                <fullName>Service Bench</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>B2B Web Portal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>