force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Web_link_with_info__c.field-meta.xml
<CustomField>
    <fullName>Web_link_with_info__c</fullName>
    <inlineHelpText>Enter web link if available</inlineHelpText>
    <label>Web link with info</label>
    <type>TextArea</type>
</CustomField>