force-app/main/default/objects/Home_Services_BRD_Process__c/fields/What_should_be_done_with_removed_product__c.field-meta.xml
<CustomField>
    <fullName>What_should_be_done_with_removed_product__c</fullName>
    <description>If Haul Away = &quot;Yes&quot;, what should be done with the removed product</description>
    <inlineHelpText>If Haul Away = &quot;Yes&quot;, what should be done with the removed product</inlineHelpText>
    <label>What should be done with removed product</label>
    <type>TextArea</type>
</CustomField>