force-app/main/default/objects/Home_Services_BRD_Process__c/fields/What_tax_exempt_forms_does_client_have__c.field-meta.xml
<CustomField>
    <fullName>What_tax_exempt_forms_does_client_have__c</fullName>
    <inlineHelpText>What tax exemption forms does the client have if any? Need to be provided if they have these forms.</inlineHelpText>
    <label>What tax exempt forms does client have</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>