force-app/main/default/objects/Home_Services_BRD_Process__c/fields/When_necessary_can_use_Non_OEM_Parts__c.field-meta.xml
<CustomField>
    <fullName>When_necessary_can_use_Non_OEM_Parts__c</fullName>
    <inlineHelpText>Can we search for and purchase parts outside of the client to meet the commitment to the client and can we charge the client for those parts at the purchase cost?</inlineHelpText>
    <label>When necessary can use Non-OEM Parts</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Yes only when Client is on National b/o</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>