force-app/main/default/objects/Home_Services_BRD_Process__c/fields/When_will_we_get_service_manuals__c.field-meta.xml
<CustomField>
    <fullName>When_will_we_get_service_manuals__c</fullName>
    <label>When will we get service manuals</label>
    <type>TextArea</type>
</CustomField>