force-app/main/default/objects/Home_Services_BRD_Process__c/fields/When_will_we_have_a_service_Flash__c.field-meta.xml
<CustomField>
    <fullName>When_will_we_have_a_service_Flash__c</fullName>
    <label>When will we have a service Flash?</label>
    <type>Date</type>
</CustomField>