force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Where_does_client_stock_parts__c.field-meta.xml
<CustomField>
    <fullName>Where_does_client_stock_parts__c</fullName>
    <label>Where does client stock parts</label>
    <type>TextArea</type>
</CustomField>