force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Which_retailers_sold_this_product__c.field-meta.xml
<CustomField>
    <fullName>Which_retailers_sold_this_product__c</fullName>
    <label>Which retailers sold this product</label>
    <type>TextArea</type>
</CustomField>