force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Who_creates_the_order__c.field-meta.xml
<CustomField>
    <fullName>Who_creates_the_order__c</fullName>
    <label>Who creates the order</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Sears</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>