force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Who_entitles_customer_that_they_qualify__c.field-meta.xml
<CustomField>
    <fullName>Who_entitles_customer_that_they_qualify__c</fullName>
    <inlineHelpText>Who confirms that the customer that they qualify for the recall, us or the client?</inlineHelpText>
    <label>Who entitles customer that they qualify</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Sears</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>