force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Who_is_contracting_entity__c.field-meta.xml
<CustomField>
    <fullName>Who_is_contracting_entity__c</fullName>
    <inlineHelpText>Who will be providing Service?</inlineHelpText>
    <label>Who is contracting entity</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sears, Roebuck &amp; Company (SHC)</fullName>
            </value>
            <value>
                <fullName>Sears Home Improvement Products (SHIP)</fullName>
            </value>
            <value>
                <fullName>A&amp;E Factory Service, LLC</fullName>
            </value>
            <value>
                <fullName>A&amp;E Delivery</fullName>
            </value>
            <value>
                <fullName>A&amp;E Lawn &amp; Garden</fullName>
            </value>
            <value>
                <fullName>Unknown or TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>