force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Who_is_the_primary_technical_contact__c.field-meta.xml
<CustomField>
    <fullName>Who_is_the_primary_technical_contact__c</fullName>
    <inlineHelpText>Name and Phone Number</inlineHelpText>
    <label>Who is the primary technical contact</label>
    <type>TextArea</type>
</CustomField>