force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Who_keeps_records_of_permit_work__c.field-meta.xml
<CustomField>
    <fullName>Who_keeps_records_of_permit_work__c</fullName>
    <inlineHelpText>Where will the records of the permit and post work inspection be kept?</inlineHelpText>
    <label>Who keeps records of permit work</label>
    <type>TextArea</type>
</CustomField>