force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Who_notifies_customer_of_Recall_Rework__c.field-meta.xml
<CustomField>
    <fullName>Who_notifies_customer_of_Recall_Rework__c</fullName>
    <label>Who notifies customer of Recall/Rework</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sears</fullName>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>