force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Who_pays_for_owns_permit__c.field-meta.xml
<CustomField>
    <fullName>Who_pays_for_owns_permit__c</fullName>
    <inlineHelpText>Who is responsible for obtaining and paying for the permit?</inlineHelpText>
    <label>Who pays for/owns permit</label>
    <type>TextArea</type>
</CustomField>