force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Who_performs_post_work_inspection__c.field-meta.xml
<CustomField>
    <fullName>Who_performs_post_work_inspection__c</fullName>
    <label>Who performs post work inspection</label>
    <type>TextArea</type>
</CustomField>