force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Who_provides_installation_materials__c.field-meta.xml
<CustomField>
    <fullName>Who_provides_installation_materials__c</fullName>
    <inlineHelpText>Examples: Pigtail waterline, dryer vent, etc.</inlineHelpText>
    <label>Who provides installation materials</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sears Installer</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>