force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Who_submits_and_pays_tax__c.field-meta.xml
<CustomField>
    <fullName>Who_submits_and_pays_tax__c</fullName>
    <inlineHelpText>If the service is subject to tax, who is responsible for collecting and submitting the taxes?</inlineHelpText>
    <label>Who submits and pays tax</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Repair_Only__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Sears</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>