force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Who_will_perform_the_work__c.field-meta.xml
<CustomField>
    <fullName>Who_will_perform_the_work__c</fullName>
    <label>zDEL_Who will perform the work</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sears technicians</fullName>
            </value>
            <value>
                <fullName>A&amp;E Factory Service Technicians</fullName>
            </value>
            <value>
                <fullName>A&amp;E Delivery Technicians</fullName>
            </value>
            <value>
                <fullName>A&amp;E Lawn &amp; Garden Tech&#39;s</fullName>
            </value>
            <value>
                <fullName>Unknown or TBD</fullName>
            </value>
            <value>
                <fullName>Altraquip</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>