force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Who_will_recieve_customer_complaints__c.field-meta.xml
<CustomField>
    <fullName>Who_will_recieve_customer_complaints__c</fullName>
    <inlineHelpText>For customer complaints regarding service, who will receive the complaint and handle it?</inlineHelpText>
    <label>Who will recieve customer complaints</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>MSO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>