force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Will_client_ship_parts_dir_to_customer__c.field-meta.xml
<CustomField>
    <fullName>Will_client_ship_parts_dir_to_customer__c</fullName>
    <label>Will client ship parts dir to customer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>