force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Will_customers_be_surveyed__c.field-meta.xml
<CustomField>
    <fullName>Will_customers_be_surveyed__c</fullName>
    <label>Will customers be surveyed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>