force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Will_we_handle_parts_distribution__c.field-meta.xml
<CustomField>
    <fullName>Will_we_handle_parts_distribution__c</fullName>
    <label>Will we handle parts distribution</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>