force-app/main/default/objects/Home_Services_BRD_Process__c/fields/zAuthorization_limit_if_yes__c.field-meta.xml
<CustomField>
    <fullName>zAuthorization_limit_if_yes__c</fullName>
    <inlineHelpText>When authorization is required, explain when and at what dollar values.</inlineHelpText>
    <label>zFTC_Authorization $$ limit if yes</label>
    <length>100</length>
    <type>Text</type>
</CustomField>