force-app/main/default/objects/Home_Services_BRD_Process__c/fields/zCan_we_promote_PAs_on_service__c.field-meta.xml
<CustomField>
    <fullName>zCan_we_promote_PAs_on_service__c</fullName>
    <inlineHelpText>Yes or No? If yes is it only for some of the service or all? And explain</inlineHelpText>
    <label>zFTC_Can we promote PAs on service</label>
    <type>TextArea</type>
</CustomField>