force-app/main/default/objects/Home_Services_BRD_Process__c/fields/zDEL_Provide_claims_contact__c.field-meta.xml
<CustomField>
    <fullName>zDEL_Provide_claims_contact__c</fullName>
    <label>zDEL_Provide claims contact</label>
    <type>TextArea</type>
</CustomField>