force-app/main/default/objects/Home_Services_BRD_Process__c/fields/zDescribe_parts_handling_process__c.field-meta.xml
<CustomField>
    <fullName>zDescribe_parts_handling_process__c</fullName>
    <label>zFTC_Describe parts handling process</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>