force-app/main/default/objects/Home_Services_BRD_Process__c/fields/zDo_we_have_a_service_flash__c.field-meta.xml
<CustomField>
    <fullName>zDo_we_have_a_service_flash__c</fullName>
    <description>Replaced by &quot;When will we have a service Flash?&quot;</description>
    <label>zFTC_Do we have a service flash</label>
    <type>TextArea</type>
</CustomField>