force-app/main/default/objects/Home_Services_BRD_Process__c/fields/zExisting_client_or_new_client__c.field-meta.xml
<CustomField>
    <fullName>zExisting_client_or_new_client__c</fullName>
    <label>zFTC_Existing client or new client</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Existing New Service</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>