force-app/main/default/objects/Home_Services_BRD_Process__c/fields/zHow_will_we_handle_parts__c.field-meta.xml
<CustomField>
    <fullName>zHow_will_we_handle_parts__c</fullName>
    <label>zFTC_How will we handle parts</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>