force-app/main/default/objects/Home_Services_BRD_Process__c/fields/zIf_not_sourced_fill_rate_in_3_days__c.field-meta.xml
<CustomField>
    <fullName>zIf_not_sourced_fill_rate_in_3_days__c</fullName>
    <inlineHelpText>If the part is not sourced, what is the percent fill rate in 3 days?</inlineHelpText>
    <label>zFTC_If not sourced, % fill rate 3 days</label>
    <type>TextArea</type>
</CustomField>