force-app/main/default/objects/Home_Services_BRD_Process__c/fields/zIf_OEM_service_parts_info_availability__c.field-meta.xml
<CustomField>
    <fullName>zIf_OEM_service_parts_info_availability__c</fullName>
    <inlineHelpText>If OEM, do you have service manuals, schematics, and parts list and if not when will we receive them?</inlineHelpText>
    <label>zFTC_If OEM, service/parts info avail</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>