force-app/main/default/objects/Home_Services_BRD_Process__c/fields/zIW_Lwn_Grdn_engine_transmission_claims__c.field-meta.xml
<CustomField>
    <fullName>zIW_Lwn_Grdn_engine_transmission_claims__c</fullName>
    <inlineHelpText>If the service is IW Lawn and Garden, will the client handle engine and transmission claims?</inlineHelpText>
    <label>zFTC_IW Lwn/Grdn, engine/trans claims</label>
    <type>TextArea</type>
</CustomField>