force-app/main/default/objects/Home_Services_BRD_Process__c/fields/zMerchandise_Location__c.field-meta.xml
<CustomField>
    <fullName>zMerchandise_Location__c</fullName>
    <inlineHelpText>Where will we SHC/A&amp;E be picking up merchandise?</inlineHelpText>
    <label>zFTC_Merchandise Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Client Premise</fullName>
            </value>
            <value>
                <fullName>Customer Premise</fullName>
            </value>
            <value>
                <fullName>Sears Premise</fullName>
            </value>
            <value>
                <fullName>Installer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>