force-app/main/default/objects/Home_Services_BRD_Process__c/fields/zPieces_per_stop__c.field-meta.xml
<CustomField>
    <fullName>zPieces_per_stop__c</fullName>
    <label>zFTC_Pieces per stop</label>
    <length>100</length>
    <type>Text</type>
</CustomField>