force-app/main/default/objects/Home_Services_BRD_Process__c/fields/zRevenue_Sharing__c.field-meta.xml
<CustomField>
    <fullName>zRevenue_Sharing__c</fullName>
    <inlineHelpText>If yes, describe.</inlineHelpText>
    <label>zFTC_Revenue Sharing</label>
    <type>TextArea</type>
</CustomField>