force-app/main/default/objects/Home_Services_BRD_Process__c/fields/zType_of_Services__c.field-meta.xml
<CustomField>
    <fullName>zType_of_Services__c</fullName>
    <inlineHelpText>IW - In warranty, SC - service contract, OOW - out of warranty, PT- payroll transfer, CC - collect calls, No Coverage - unknown, Other - send details to PM</inlineHelpText>
    <label>zFTC_Type of Services</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In-Home</fullName>
            </value>
            <value>
                <fullName>Delivery</fullName>
            </value>
            <value>
                <fullName>Install</fullName>
            </value>
            <value>
                <fullName>Setup</fullName>
            </value>
            <value>
                <fullName>Recall</fullName>
            </value>
            <value>
                <fullName>Rework</fullName>
            </value>
            <value>
                <fullName>CarryIn</fullName>
            </value>
            <value>
                <fullName>Repair-Replace</fullName>
            </value>
            <value>
                <fullName>PM Check</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>