force-app/main/default/objects/Home_Services_BRD_Process__c/fields/zWay_to_set_service__c.field-meta.xml
<CustomField>
    <fullName>zWay_to_set_service__c</fullName>
    <inlineHelpText>If other is chosen, explain in Other CCN needs/requirements</inlineHelpText>
    <label>zFTC_Primary_way to set service</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SPI</fullName>
            </value>
            <value>
                <fullName>SPI2</fullName>
            </value>
            <value>
                <fullName>Service Bench</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Client System</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>