force-app/main/default/objects/Home_Services_BRD_Process__c/fields/zWho_creates_the_order__c.field-meta.xml
<CustomField>
    <fullName>zWho_creates_the_order__c</fullName>
    <label>zFTC_Who creates the order</label>
    <type>TextArea</type>
</CustomField>