force-app/main/default/objects/Home_Services_BRD_Process__c/fields/zWho_entitles_customer_that_they_qualify__c.field-meta.xml
<CustomField>
    <fullName>zWho_entitles_customer_that_they_qualify__c</fullName>
    <inlineHelpText>Who confirms that the customer that they qualify for the recall, us or the client?</inlineHelpText>
    <label>zFTC_Who entitles customer that they qua</label>
    <type>TextArea</type>
</CustomField>