force-app/main/default/objects/Home_Services_BRD_Process__c/fields/zWho_notifies_customer_of_Recall_Rework__c.field-meta.xml
<CustomField>
    <fullName>zWho_notifies_customer_of_Recall_Rework__c</fullName>
    <label>zFTC_Who notifies cust of Recall/Rework</label>
    <type>TextArea</type>
</CustomField>