force-app/main/default/objects/Home_Services_BRD_Process__c/fields/zWho_provides_installation_materials__c.field-meta.xml
<CustomField>
    <fullName>zWho_provides_installation_materials__c</fullName>
    <inlineHelpText>Examples: Pigtail waterline, dryer vent, etc.</inlineHelpText>
    <label>zFTC_Who provides installation materials</label>
    <type>TextArea</type>
</CustomField>