force-app/main/default/objects/Home_Services_BRD_Process__c/fields/zWho_submits_and_pays_tax__c.field-meta.xml
<CustomField>
    <fullName>zWho_submits_and_pays_tax__c</fullName>
    <inlineHelpText>If the service is subject to tax, who is responsible for collecting and submitting the taxes?</inlineHelpText>
    <label>zFTC_Who submits and pays tax</label>
    <type>TextArea</type>
</CustomField>