force-app/main/default/objects/Home_Services_BRD_Process__c/fields/zWho_will_recieve_customer_complaints__c.field-meta.xml
<CustomField>
    <fullName>zWho_will_recieve_customer_complaints__c</fullName>
    <inlineHelpText>For customer complaints regarding service, who will receive the complaint and handle it?</inlineHelpText>
    <label>zFTC_Who will recieve customer complaint</label>
    <type>TextArea</type>
</CustomField>