force-app/main/default/objects/Home_Services_BRD_Process__c/recordTypes/Home_Services.recordType-meta.xml
<RecordType>
    <fullName>Home_Services</fullName>
    <active>true</active>
    <label>Home Services</label>
</RecordType>