force-app/main/default/objects/Home_Services_BRD_Process__c/recordTypes/Home_Services_Approved.recordType-meta.xml
<RecordType>
    <fullName>Home_Services_Approved</fullName>
    <active>true</active>
    <description>Records that have been approved</description>
    <label>Home Services (Approved)</label>
</RecordType>