force-app/main/default/objects/Home_Services_BRD_Process__c/validationRules/Any_products_DOT_hazardous.validationRule-meta.xml
<ValidationRule>
    <fullName>Any_products_DOT_hazardous</fullName>
    <active>true</active>
    <description>Any products DOT hazardous is a required when Client Type = &quot;OEM&quot; &amp; BRD Type = &quot;Recall&quot; or &quot;Rework&quot;</description>
    <errorConditionFormula>AND(
  ISPICKVAL( Client_Type__c ,&quot;OEM&quot;),
  OR(
    ISPICKVAL( BRD_Type__c , &quot;Recall&quot;),
    ISPICKVAL( BRD_Type__c , &quot;Rework&quot;)
  ), 
  ISPICKVAL( Any_products_DOT_hazardous__c  ,&quot;&quot;)
)</errorConditionFormula>
    <errorDisplayField>Any_products_DOT_hazardous__c</errorDisplayField>
    <errorMessage>Any products DOT hazardous is a required when Client Type = &quot;OEM&quot; &amp; BRD Type = &quot;Recall&quot; or &quot;Rework&quot;</errorMessage>
</ValidationRule>