force-app/main/default/objects/Home_Services_BRD_Process__c/validationRules/Authorization_Limit_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Authorization_Limit_is_Required</fullName>
    <active>true</active>
    <description>Authorization $$ limit if yes is required when Authorization $$ limit is &quot;Yes&quot;</description>
    <errorConditionFormula>AND(
  ISPICKVAL( Authorization_dollar_limit__c, &quot;Yes&quot;),
  ISBLANK( Authorization_limit_if_yes__c )
)</errorConditionFormula>
    <errorDisplayField>Authorization_limit_if_yes__c</errorDisplayField>
    <errorMessage>Authorization $$ limit if yes is required when Authorization $$ limit = Yes</errorMessage>
</ValidationRule>