force-app/main/default/objects/Home_Services_BRD_Process__c/validationRules/Client_MSO_Needs_Requirements_is_Req.validationRule-meta.xml
<ValidationRule>
    <fullName>Client_MSO_Needs_Requirements_is_Req</fullName>
    <active>true</active>
    <description>If Way To Set Service = Other, Client MSO Needs/Requirements is required</description>
    <errorConditionFormula>AND(
  ISPICKVAL(Way_to_set_service__c, &quot;Other&quot;),
  ISBLANK(Client_MSO_needs_requirements__c)
  )</errorConditionFormula>
    <errorDisplayField>Client_MSO_needs_requirements__c</errorDisplayField>
    <errorMessage>If Way to set service is &quot;Other&quot;, Client MSO needs/requirements is required</errorMessage>
</ValidationRule>