force-app/main/default/objects/Home_Services_BRD_Process__c/validationRules/CPSC_Date_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>CPSC_Date_Required</fullName>
    <active>true</active>
    <description>Projected CPSC Announced Date required if the CPSC Involved is Yes</description>
    <errorConditionFormula>AND(
ISPICKVAL( CPSC_Involved__c , &quot;Yes&quot;) , 
ISBLANK( Projected_CPSC_announced_Date__c ) 
)</errorConditionFormula>
    <errorMessage>Projected CPSC Announced Date is required</errorMessage>
</ValidationRule>