force-app/main/default/objects/Home_Services_BRD_Process__c/validationRules/Describe_licenses_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Describe_licenses_is_required</fullName>
    <active>true</active>
    <description>If Install/Services on behalf of retailer = &quot;Yes&quot;, Describe licenses retailer has is required</description>
    <errorConditionFormula>AND(
  ISPICKVAL( Install_services_on_behalf_of_retailer__c , &quot;Yes&quot;),
  ISBLANK( Describe_licenses_retailer_has__c )
)</errorConditionFormula>
    <errorDisplayField>Describe_licenses_retailer_has__c</errorDisplayField>
    <errorMessage>Describe licenses retailer has is required when Install/Services on behalf of retailer is &quot;Yes&quot;</errorMessage>
</ValidationRule>