force-app/main/default/objects/Home_Services_BRD_Process__c/validationRules/Details_of_hazardous_products_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Details_of_hazardous_products_required</fullName>
    <active>true</active>
    <description>Details of hazardous products is a required when Any products DOT hazardous = &quot;Yes&quot;</description>
    <errorConditionFormula>AND(
  ISPICKVAL( Any_products_DOT_hazardous__c , &quot;Yes&quot; ),
  ISBLANK( Details_of_hazardous_products__c )
)</errorConditionFormula>
    <errorDisplayField>Details_of_hazardous_products__c</errorDisplayField>
    <errorMessage>Details of hazardous products is a required when Any products DOT hazardous is &quot;Yes&quot;</errorMessage>
</ValidationRule>